--- a/docs/_sass/dark_mode.scss
+++ b/docs/_sass/dark_mode.scss
@@ -396,3 +396,10 @@ body.cv-page .hero-body > .container.is-max-desktop { max-width: 960px; }
 	position: relative;
 	top: -5rem;
 }
+
+@media (max-width: 768px) {
+	.viz-container {
+		top: -4rem;
+	}
+
+}
